Fix test cases that are already fixable